--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,34 @@
 __pycache__/
 *.py[cod]
-*$py.class
+*.pyo
+*.pyd
+*.so
+*.egg-info/
+dist/
+build/
+.eggs/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
 
+.venv/
+venv/
+ENV/
+env/
+
+*.db
+*.db-wal
+*.db-shm
+
+telemetry.db
 enhancer.db
-
-.vscode/
-.idea/
 
 *.log
 
-*.tmp
-*.bak
+.DS_Store
+Thumbs.db
+
+.vscode/
+.idea/
+*.swp
+*.swo
